[package]
name = "detox"
version = "0.1.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Quickly clean up your development directories before backups ."
repository = "https://github.com/whitfin/detox"
keywords = ["backup", "compression", "clean"]
categories = ["algorithms", "command-line-utilities", "filesystem"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33"
fs_extra = "1.1"
walkdir = "2.2"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
